# PrimeTrade-Trading-Bot

./: .gitignore  Makefile  README.md
streamlit_app/: app.py  log_parser.py
trading_bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
trading_bot/bot/: cli.py  client.py  logging_config.py  orders.py  validators.py
trading_bot/tests/: conftest.py
trading_bot/tests/integration/: test_integration.py
trading_bot/tests/unit/: test_cli.py  test_orders.py  test_validators.py
