[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "binance-connector>=3.7.0",
    "typer[all]>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trading-bot = "bot.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live testnet tests (opt-in with -m integration)",
]
